HelloUltraviolet/Fixtures/RejectedSource/DataTypes/GenericInvariantSubtyping/Expected.uv
//! Expected diagnostic metadata for the GenericInvariantSubtyping rejected-source specimen.

expectedDiagnostic("E-TYP-1520", "Sub-Generic-Invariant-Err")
